[package]
name = "libsm"
version = "0.3.2"
authors = [
    "Tang Zongxun <tangzongxun@hotmail.com>",
    "Niu Junxiang <494521900@qq.com>",
    "Cryptape Technology <contact@cryptape.com>"
]

description = "A Rust Library of China's Standards of Encryption Algorithms (SM2/3/4)"
keywords = ["cipher", "cryptography"]
license = "Apache-2.0"

[dependencies]
rand = "0.7.3"
byteorder = "1.3.4"
num-bigint = "0.3.0"
num-traits = "0.2.12"
num-integer = "0.1.43"
yasna = "0.3.2"
lazy_static = "1.4.0"

[dev-dependencies]
hex = "0.4.2"
